@@ -1,14 +1,13 @@
 package org.iac2.service.architecturereconstruction.plugin.implementation.opentoscacontainer;
 
 import java.io.IOException;
+import java.io.StringWriter;
 import java.nio.file.Path;
 import java.util.Collection;
-import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.TimeUnit;
-import java.util.stream.Collectors;
 
 import javax.xml.namespace.QName;
 
@@ -18,32 +17,30 @@ import org.eclipse.winery.repository.exceptions.RepositoryCorruptException;
 import com.google.common.collect.Maps;
 import io.github.edmm.model.component.RootComponent;
 import io.github.edmm.model.relation.RootRelation;
-import io.swagger.client.model.ServiceTemplateInstanceDTO;
 import org.eclipse.jgit.api.errors.GitAPIException;
 import org.iac2.common.model.InstanceModel;
 import org.iac2.common.model.ProductionSystem;
+import org.iac2.common.utility.EdmmTypeResolver;
 import org.iac2.service.architecturereconstruction.common.interfaces.ModelCreationPlugin;
-import org.iac2.service.architecturereconstruction.plugin.manager.implementation.SimpleARPluginManager;
+import org.iac2.util.OpenTOSCATestUtils;
+import org.iac2.util.TestUtils;
 import org.junit.jupiter.api.AfterAll;
-import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.Test;
 import org.opentosca.container.client.ContainerClient;
 import org.opentosca.container.client.ContainerClientBuilder;
-import org.opentosca.container.client.model.Application;
 import org.opentosca.container.client.model.ApplicationInstance;
 import org.opentosca.container.client.model.NodeInstance;
 import org.opentosca.container.client.model.RelationInstance;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
-
 public class OpenToscaContainerPluginTest {
-
-    private static final TestUtils testUtils = new TestUtils();
-
+    private static final Logger LOGGER = LoggerFactory.getLogger(OpenToscaContainerPluginTest.class);
     private static final String TESTAPPLICATIONSREPOSITORY = "https://github.com/OpenTOSCA/tosca-definitions-example-applications";
     private static final QName csarId = new QName("http://opentosca.org/example/applications/servicetemplates", "RealWorld-Application_Angular-Spring-MySQL-w1");
     private static final String hostName = "localhost";
@@ -51,77 +48,31 @@ public class OpenToscaContainerPluginTest {
     private static Path csarPath;
     private static String appName = "RealWorld-Application_Angular-Spring-MySQL-w1";
     private static String instanceId = "";
-    private static ContainerClient client = ContainerClientBuilder.builder().withHostname(hostName).withPort(Integer.valueOf(port)).withTimeout(20, TimeUnit.MINUTES).build();
+    private static final ContainerClient client = ContainerClientBuilder.builder().withHostname(hostName).withPort(Integer.valueOf(port)).withTimeout(20, TimeUnit.MINUTES).build();
 
     // set this to true if you want faster execution of this test when you probably need to run it more often
-    private static boolean debugging = true;
-
+    private static final boolean cleanupAfterTests = true;
 
     @BeforeAll
     public static void setupContainer() throws GitAPIException, AccountabilityException, RepositoryCorruptException, IOException, ExecutionException, InterruptedException {
-        csarPath = testUtils.fetchCsar(TESTAPPLICATIONSREPOSITORY, csarId);
+        EdmmTypeResolver.initDefaultMappings();
+        csarPath = TestUtils.fetchCsar(TESTAPPLICATIONSREPOSITORY, csarId);
         appName = csarPath.getFileName().toString();
-        uploadApp();
-        provisionApp();
+        OpenTOSCATestUtils.uploadApp(client, appName, csarPath);
+        instanceId = OpenTOSCATestUtils.provisionApp(client, appName);
     }
 
     @AfterAll
     public static void cleanupContainer() {
-        if (!debugging) {
-            terminateApp();
-            client.getApplications().forEach(a -> client.removeApplication(a));
+        if (!cleanupAfterTests) {
+            OpenTOSCATestUtils.terminateApp(client, appName, hostName, port);
+            client.getApplications().forEach(client::removeApplication);
         }
-    }
-
-    private static void uploadApp() {
-        List<Application> applications = client.getApplications();
-        Application application = null;
-        for (Application app : applications) {
-            if (app.getId().equals(appName)) {
-                application = app;
-            }
-        }
-
-        if (application == null) {
-            application = client.uploadApplication(csarPath);
-        }
-
-        Assertions.assertNotNull(application);
-        Assertions.assertEquals(csarPath.getFileName().toString(), application.getId());
-        Assertions.assertEquals(1, client.getApplications().size());
-    }
-
-    private static void provisionApp() {
-        Application application = client.getApplication(appName).orElseThrow(IllegalStateException::new);
-        Collection<ApplicationInstance> instances = client.getApplicationInstances(application);
-
-        if (instances.isEmpty()) {
-            Assertions.assertEquals(0, client.getApplicationInstances(application, ServiceTemplateInstanceDTO.StateEnum.CREATED).size());
-            int startSize = client.getApplicationInstances(application).size();
-            ApplicationInstance instance = client.provisionApplication(application, testUtils.getProvisioningInputParameters());
-            Assertions.assertNotNull(instance);
-            Assertions.assertEquals(ServiceTemplateInstanceDTO.StateEnum.CREATED, instance.getState());
-            instances = client.getApplicationInstances(application);
-            instanceId = instances.stream().map(i -> i.getId()).findFirst().orElse(null);
-            Assertions.assertEquals(startSize + 1, instances.size());
-            Assertions.assertEquals(1, client.getApplicationInstances(application, ServiceTemplateInstanceDTO.StateEnum.CREATED).size());
-        } else {
-            instances = client.getApplicationInstances(application);
-            instanceId = instances.stream().map(i -> i.getId()).findFirst().orElse(null);
-        }
-
-        Assertions.assertNotNull(instanceId);
-    }
-
-    private static void terminateApp() {
-        ApplicationInstance instance = client.getApplicationInstances(client.getApplication(appName).get()).stream().findFirst().get();
-        client.terminateApplicationInstance(instance, testUtils.getTerminationPlanInputParameters(testUtils.getServiceInstanceURL(hostName, port, appName, instance.getApplication().getServiceTemplate().getId(), instance.getId())));
     }
 
     @Test
     public void testReconstruction() {
-        SimpleARPluginManager instance = SimpleARPluginManager.getInstance();
-        ModelCreationPlugin plugin = instance.getModelCreationPlugin("opentosca-container-model-creation-plugin");
+        ModelCreationPlugin plugin = OpenTOSCATestUtils.getOpenTOSCAModelCreationPlugin();
         assertNotNull(plugin);
         assertEquals("opentosca-container-model-creation-plugin", plugin.getIdentifier());
 
@@ -133,6 +84,11 @@ public class OpenToscaContainerPluginTest {
         ProductionSystem productionSystem = new ProductionSystem("opentoscacontainer", "realworldapp-test", prodProps);
 
         InstanceModel instanceModel = plugin.reconstructInstanceModel(productionSystem);
+        LOGGER.info("Reconstructed edmm instance model:");
+        StringWriter writer = new StringWriter();
+        instanceModel.getDeploymentModel().getGraph().generateYamlOutput(writer);
+        LOGGER.info(writer.toString());
+
         Set<RootComponent> comps = instanceModel.getDeploymentModel().getComponents();
         Set<RootRelation> rels = instanceModel.getDeploymentModel().getRelations();
 
@@ -141,29 +97,42 @@ public class OpenToscaContainerPluginTest {
         assertEquals(applicationInstance.getNodeInstances().size(), comps.size());
         assertEquals(applicationInstance.getRelationInstances().size(), rels.size());
 
-        assertEquals(applicationInstance.getNodeInstances().size(), comps.stream().filter(c -> {
-            boolean nodeExists = false;
-            boolean relationsExist = true;
-            for (NodeInstance nodeInstance : applicationInstance.getNodeInstances()) {
-                if (nodeInstance.getId().equals(c.getId())) {
-                    nodeExists = true;
-                }
-            }
-            relationsExist = applicationInstance.getRelationInstances().stream().filter(r -> r.getSourceId().equals(c.getId())).collect(Collectors.toList()).size() == c.getRelations().size();
-            return nodeExists & relationsExist;
-        }).collect(Collectors.toList()).size());
+        // ensure all edmm components have corresponding node instances
+        assertEquals(applicationInstance.getNodeInstances().size(), comps
+                .stream()
+                .filter(c -> applicationInstance.getNodeInstances()
+                        .stream()
+                        .anyMatch(i -> i.getTemplate().equals(c.getName())))
+                .count());
+
+        // ensure all edmm components have correct outgoing relations
+        assertEquals(applicationInstance.getNodeInstances().size(), comps
+                .stream()
+                .filter(c -> applicationInstance.getRelationInstances()
+                        .stream()
+                        // find the node instance that corresponds to the source of the current relation
+                        // then compare its template id with the name of the current edmm component
+                        .filter(r -> findNodeInstanceById(r.getSourceId(), applicationInstance)
+                                .getTemplate()
+                                .equals(c.getName()))
+                        .count() == c.getRelations().size())
+                .count());
+
         assertEquals(applicationInstance.getRelationInstances().size(), rels.stream().filter(r -> {
             for (RelationInstance relationInstance : applicationInstance.getRelationInstances()) {
-                if (relationInstance.getTargetId().equals(r.getTarget())) {
+                if (findNodeInstanceById(relationInstance.getTargetId(), applicationInstance).getTemplate().equals(r.getTarget())) {
                     return true;
                 }
             }
             return false;
-        }).collect(Collectors.toList()).size());
+        }).count());
 
         applicationInstance.getNodeInstances().forEach(n -> {
-            Collection<RootComponent> components = instanceModel.getDeploymentModel().getComponents().stream().filter(c ->
-                    c.getId().equals(n.getId())).collect(Collectors.toList());
+            Collection<RootComponent> components = instanceModel.getDeploymentModel().getComponents()
+                    .stream()
+                    .filter(c ->
+                            c.getName().equals(n.getTemplate()))
+                    .toList();
             assertEquals(1, components.size());
 
             components.forEach(c -> {
@@ -177,5 +146,13 @@ public class OpenToscaContainerPluginTest {
 
     private ApplicationInstance getInstance() {
         return client.getApplicationInstances(client.getApplication(appName).get()).get(0);
+    }
+
+    private static NodeInstance findNodeInstanceById(String id, ApplicationInstance applicationInstance) {
+        return applicationInstance.getNodeInstances()
+                .stream()
+                .filter(ni -> ni.getId().equals(id))
+                .findFirst()
+                .orElseThrow();
     }
 }
